--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "author": "",
   "license": "ISC",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "bugs": {
     "url": "https://github.com/SergiusBlack/qa-auto-engineer-javascript-project-44/issues"
   },
